# fraud-auto-research

./: .gitignore  README.md  config.yaml  features.py  features_fdh.py  features_ieee.py  features_ieee_fresh.py  features_paysim.py  features_sim.py  fraud_practices.md  fraud_practices_index.md  journal_fdh.md  journal_fraud-sim.md  journal_ieee-cis-fresh.md  journal_ieee-cis.md  journal_paysim.md  model.py  model_fdh.py  model_ieee.py  model_ieee_fresh.py  model_sim.py  prepare_data.py  program.md  pyproject.toml  recipes.md
configs/: fdh.yaml  fraud-sim.yaml  ieee-cis-fresh.yaml  ieee-cis.yaml  paysim.yaml
datasets/fdh/: features.py  model.py
datasets/fraud_sim/: features.py  model.py
datasets/ieee_cis/: features.py
datasets/ieee_cis_fresh/: model.py
datasets/paysim/: model.py
docs/: architecture-v2.md
harness/: column_analysis.py  context.py  dashboard.py  data_loader.py  evaluate.py  experiment_tracker.py  feature_analysis.py  plot_results.py  report.py  results_store.py  utils.py  validate_features.py
reports/: dashboard.html  dashboard_data.json  report.html
scripts/: features.sql  prepare_sim_data.py
