[project]
name = "fraud-auto-research"
version = "0.1.0"
description = "Autonomous feature engineering and model evaluation for transaction fraud monitoring"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "db-dtypes>=1.0",
]
